--- a/blog/_posts/2020-11-02-p2pnetwork1.md
+++ b/blog/_posts/2020-11-02-p2pnetwork1.md
@@ -1,5 +1,4 @@
 ---
-
 title: P2P 网络（1）概要
 summary: 比特币网络协议允许全节点协作地维护一个P2P（peer-to-peer）对等网络，用于块和交易交换
 date: 2020-11-02 10:00
@@ -17,29 +16,21 @@ tags:
 
 :::
 
-The Bitcoin network protocol allows full nodes (peers) to collaboratively maintain a peer-to-peer network for block and transaction exchange.
-
 比特币网络协议允许全节点协作地维护一个P2P（peer-to-peer）对等网络，用于块和交易交换。
 
 ## 引言
 
-Full nodes download and verify every block and transaction prior to relaying them to other nodes. Archival nodes are full nodes which store the entire blockchain and can serve historical blocks to other nodes. Pruned nodes are full nodes which do not store the entire blockchain. Many SPV clients also use the Bitcoin [network](https://developer.bitcoin.org/devguide/p2p_network.html)protocol to connect to full nodes.
+全节点下载并验证每个块和事务，然后再将它们转发给其他节点。档案节点是完整的节点，存储整个区块链，并可以提供历史区块给其他节点。剪枝节点是完整的节点但不存储整个区块链。许多 SPV 客户端使用比特币网络协议连接到完整的节点。
 
-全节点下载并验证每个块和事务，然后再将它们转发给其他节点。档案节点是完整的节点，存储整个区块链，并可以提供历史区块给其他节点。被修剪的节点是完整的节点但不存储整个区块链。许多 SPV 客户端使用比特币网络协议连接到完整的节点。
+共识规则并不涵盖网络，因此比特币程序可能使用替代网络和协议，比如一些矿工使用的高速块中继网络[high-speed block relay network](https://www.mail-archive.com/bitcoin-development@lists.sourceforge.net/msg03189.html)，以及一些钱包使用的专用交易信息服务器[dedicated transaction information servers](https://github.com/spesmilo/electrum-server)，这些钱包提供了 SPV 级别的安全性。
 
-Consensus rules do not cover networking, so Bitcoin programs may use alternative networks and protocols, such as the [high-speed block relay network](https://www.mail-archive.com/bitcoin-development@lists.sourceforge.net/msg03189.html) used by some miners and the [dedicated transaction information servers](https://github.com/spesmilo/electrum-server) used by some wallets that provide SPV-level security.
-
-共识规则并不涵盖网络，因此比特币程序可能使用替代网络和协议，比如一些矿工使用的高速块中继网络，以及一些钱包使用的专用交易信息服务器，这些钱包提供了 SPV 级别的安全性。
-
-To provide practical examples of the Bitcoin [peer-to-peer network](https://developer.bitcoin.org/devguide/p2p_network.html), this section uses Bitcoin Core as a representative full node and [BitcoinJ](http://bitcoinj.github.io/) as a representative SPV client. Both programs are flexible, so only default behavior is described. Also, for privacy, actual IP addresses in the example output below have been replaced with [RFC5737](http://tools.ietf.org/html/rfc5737) reserved IP addresses.
-
-为了提供比特币对等网络的实例，本节使用比特币核心作为代表性的完整节点，BitcoinJ 作为代表性的 SPV 客户端。这两个程序都是灵活的，因此只描述默认行为。另外，为了保护隐私，下面示例输出中的实际 IP 地址已被 RFC5737保留 IP 地址替换。
+为了提供比特币对等网络的实例，本节使用比特币核心作为代表性的完整节点，[BitcoinJ](http://bitcoinj.github.io/) 作为代表性的 SPV 客户端。这两个程序都是灵活的，因此只描述默认行为。另外，为了保护隐私，下面示例输出中的实际 IP 地址已被 [RFC5737](http://tools.ietf.org/html/rfc5737)保留 IP 地址替换。
 
 ## 发现节点
 
 When started for the first time, programs don’t know the IP addresses of any active full nodes. In order to discover some IP addresses, they query one or more DNS names (called [DNS seeds](https://developer.bitcoin.org/glossary.html#term-DNS-seed)) hardcoded into Bitcoin Core and [BitcoinJ](http://bitcoinj.github.io/). The response to the lookup should include one or more [DNS A records](http://tools.ietf.org/html/rfc1035#section-3.2.2) with the IP addresses of full nodes that may accept new incoming connections. For example, using the Unix ``dig` command <[dig (command) - Wikipedia](https://en.wikipedia.org/wiki/Dig_%28Unix_command%29)>`__:
 
-当第一次启动时，程序不知道任何活动中的全节点的 IP 地址。为了发现一些 IP 地址，他们查询一个或多个被硬编码成的 DNS 种子。查找的响应应该包括一个或多个 DNS A 记录，其中包含可能接受新传入连接的全节点的 IP 地址。例如，使用 Unix 的“ dig’命令
+当第一次启动时，程序不知道任何活动中的全节点的 IP 地址。为了发现一些 IP 地址，他们查询一个或多个被硬编码成的 DNS 种子。查找的响应应该包括一个或多个 DNS A 记录，其中包含可能接受新传入连接的全节点的 IP 地址。例如，使用 Unix 的["dig"](https://en.wikipedia.org/wiki/Dig_%28Unix_command%29)命令
 
 ```Bash
 % dig seed.bitcoin.sipa.be +nostats +nocomments +nocmd
@@ -56,95 +47,59 @@ seed.bitcoin.sipa.be.    3599    IN    A    13.233.97.177
 .
 ```
 
-The DNS seeds are maintained by Bitcoin community members: some of them provide dynamic DNS seed servers which automatically get IP addresses of active nodes by scanning the [network](https://developer.bitcoin.org/devguide/p2p_network.html); others provide static DNS seeds that are updated manually and are more likely to provide IP addresses for inactive nodes. In either case, nodes are added to the DNS seed if they run on the default Bitcoin ports of 8333 for mainnet or 18333 for testnet.
+DNS 种子由比特币社区成员维护: 其中一些提供动态 DNS 种子服务器，通过扫描网络自动获取活动节点的 IP 地址; 其他提供手动更新的静态 DNS 种子，更有可能为非活动节点提供 IP 地址。在这两种情况下，如果节点在主网络的默认比特币端口8333或 testnet 的默认端口18333上运行，那么它们将被添加到 DNS 种子中。
 
-DNS 种子由比特币社区成员维护: 其中一些提供动态 DNS 种子服务器，通过扫描网络自动获取活动节点的 IP 地址; 其他提供静态 DNS 种子，手动更新，更有可能为非活动节点提供 IP 地址。在这两种情况下，如果节点在主网络的默认比特币端口8333或 testnet 的默认端口18333上运行，那么它们将被添加到 DNS 种子中。
+DNS 种子结果不被认证，恶意种子操作员或网络中间人攻击者可以返回攻击者控制的节点的 IP 地址，在攻击者自己的网络上隔离一个程序，并允许攻击者向其提供伪造的事务和块。因此，程序不应该完全依赖 DNS 种子。
 
-DNS seed results are not authenticated and a malicious seed operator or [network](https://developer.bitcoin.org/devguide/p2p_network.html) [man-in-the-middle](https://en.wikipedia.org/wiki/Man-in-the-middle_attack) attacker can return only IP addresses of nodes controlled by the attacker, isolating a program on the attacker’s own [network](https://developer.bitcoin.org/devguide/p2p_network.html) and allowing the attacker to feed it bogus transactions and blocks. For this reason, programs should not rely on DNS seeds exclusively.
+一旦一个程序连接到网络上，它链接的节点就可以开始向它发送带有网络上其他节点的 IP 地址和端口号的 addr (address)消息，这提供了一种完全分散的节点发现方法。比特币在一个数据库中保存已知对等点的记录，允许它之后直接连接到节点，而不必再使用 DNS 种子。
 
-DNS 种子结果不被认证，恶意种子操作员或网络中间人攻击者只能返回攻击者控制的节点的 IP 地址，在攻击者自己的网络上隔离一个程序，并允许攻击者向其提供伪造的事务和块。因此，程序不应该完全依赖 DNS 种子。
+然而，节点经常离开网络或者更改 IP 地址，所以程序在成功连接之前可能需要在启动时进行几次不同的连接尝试。这可能会大大延迟连接到网络所需的时间，迫使用户在发送交易或检查支付状态之前等待。
 
-Once a program has connected to the [network](https://developer.bitcoin.org/devguide/p2p_network.html), its peers can begin to send it `addr` (address) messages with the IP addresses and port numbers of other peers on the [network](https://developer.bitcoin.org/devguide/p2p_network.html), providing a fully decentralized method of peer discovery. Bitcoin Core keeps a record of known peers in a persistent on-disk database which usually allows it to connect directly to those peers on subsequent startups without having to use DNS seeds.
+为了避免这种可能的延迟，BitcoinJ 总是使用动态 DNS 种子来获取当前活动节点的 IP 地址。比特币Core还试图在尽量减少延迟和避免不要的 DNS 种子使用之间取得平衡: 如果比特币Core在其数据库中有条目，它会花费多达11秒的时间试图连接至少其中一个，然后再回到种子; 如果在这段时间内建立了连接，它不会查询任何种子。
 
-一旦一个程序连接到网络上，它的对等点就可以开始向它发送带有网络上其他对等点的 IP 地址和端口号的 addr (address)消息，这提供了一种完全分散的对等点发现方法。比特币核心在一个持久的磁盘数据库中保存了已知对等点的记录，通常允许它直接连接到后续创业公司的对等点，而不必使用 DNS 种子。
+比特币Core和 BitcoinJ 还包括一个硬编码的 IP 地址和端口号列表，这些列表包含了几十个节点，这些节点在该软件的特定版本首次发布时处于活动状态。如果60秒内没有 DNS 种子服务器响应查询，比特币Core将开始尝试连接这些节点，提供一个自动回退选项。
 
-However, peers often leave the [network](https://developer.bitcoin.org/devguide/p2p_network.html) or change IP addresses, so programs may need to make several different connection attempts at startup before a successful connection is made. This can add a significant delay to the amount of time it takes to connect to the [network](https://developer.bitcoin.org/devguide/p2p_network.html), forcing a user to wait before sending a transaction or checking the status of payment.
+作为一种手动回退选项，比特币Core还提供了几种命令行连接选项，包括能够按 IP 地址从特定节点获取节点列表，或按 IP 地址与特定节点进行持久连接。有关详细信息，请参阅-help 文本。可以通过编程来做同样的事情。
 
-然而，对等点经常离开网络或者更改 IP 地址，所以程序在成功连接之前可能需要在启动时进行几次不同的连接尝试。这可能会大大延迟连接到网络所需的时间，迫使用户在发送事务或检查支付状态之前等待。
 
-To avoid this possible delay, [BitcoinJ](http://bitcoinj.github.io/) always uses dynamic DNS seeds to get IP addresses for nodes believed to be currently active. Bitcoin Core also tries to strike a balance between minimizing delays and avoiding unnecessary DNS seed use: if Bitcoin Core has entries in its peer database, it spends up to 11 seconds attempting to connect to at least one of them before falling back to seeds; if a connection is made within that time, it does not query any seeds.
 
-为了避免这种可能的延迟，BitcoinJ 总是使用动态 DNS 种子来获取当前活动节点的 IP 地址。比特币核心还试图在尽量减少延迟和避免不必要的 DNS 种子使用之间取得平衡: 如果比特币核心在其同行数据库中有条目，它会花费多达11秒的时间试图连接至少其中一个，然后再回到种子; 如果在这段时间内建立了连接，它不会查询任何种子。
+资源: 比特币 Seeder，这个程序由比特币Core和 BitcoinJ 使用。比特币核心 DNS 种子策略[DNS Seed Policy](https://github.com/bitcoin/bitcoin/blob/master/doc/dnsseed-policy.md).。比特币核心和 BitcoinJ 使用的硬编码 IP 地址列表的种子制作脚本[makeseeds script](https://github.com/bitcoin/bitcoin/tree/master/contrib/seeds)。
 
-Both Bitcoin Core and [BitcoinJ](http://bitcoinj.github.io/) also include a hardcoded list of IP addresses and port numbers to several dozen nodes which were active around the time that particular version of the software was first released. Bitcoin Core will start attempting to connect to these nodes if none of the DNS seed servers have responded to a query within 60 seconds, providing an automatic fallback option.
 
-比特币核心和 BitcoinJ 还包括一个硬编码的 IP 地址和端口号列表，这些列表包含了几十个节点，这些节点在该软件的特定版本首次发布时处于活动状态。如果60秒内没有 DNS 种子服务器响应查询，比特币核心将开始尝试连接这些节点，提供一个自动回退选项。
 
-As a manual fallback option, Bitcoin Core also provides several command-line connection options, including the ability to get a list of peers from a specific node by IP address, or to make a persistent connection to a specific node by IP address. See the `-help` text for details. [BitcoinJ](http://bitcoinj.github.io/) can be programmed to do the same thing.
+## 连接到节点
 
-作为一种手动回退选项，比特币核心还提供了几种命令行连接选项，包括能够按 IP 地址从特定节点获取对等点列表，或按 IP 地址与特定节点进行持久连接。有关详细信息，请参阅-help 文本。可以通过编程来做同样的事情。
+通过发送一个“ version”消息来连接到节点，该消息包含您的版本号、区块和当前时间到远程节点。远程节点用它自己的“version”消息进行响应。然后两个节点向互相发送 `verack`消息，以表明连接已经建立。
 
-**Resources:** [Bitcoin Seeder](https://github.com/sipa/bitcoin-seeder), the program run by several of the seeds used by Bitcoin Core and [BitcoinJ](http://bitcoinj.github.io/). The Bitcoin Core [DNS Seed Policy](https://github.com/bitcoin/bitcoin/blob/master/doc/dnsseed-policy.md). The hardcoded list of IP addresses used by Bitcoin Core and [BitcoinJ](http://bitcoinj.github.io/) is generated using the [makeseeds script](https://github.com/bitcoin/bitcoin/tree/master/contrib/seeds).
-
-资源: 比特币 Seeder，由比特币核心和 BitcoinJ 使用的几个种子运行的程序。比特币核心 DNS 种子策略。比特币核心和 BitcoinJ 使用的硬编码 IP 地址列表使用的是最大完工时间脚本。
-
-##连接到节点
-
-Connecting to a peer is done by sending a [“version” message](https://developer.bitcoin.org/reference/p2p_networking.html#version), which contains your version number, block, and current time to the remote node. The remote node responds with its own [“version” message](https://developer.bitcoin.org/reference/p2p_networking.html#version). Then both nodes send a [“verack” message](https://developer.bitcoin.org/reference/p2p_networking.html#verack) to the other node to indicate the connection has been established.
-
-通过发送一个“ version”消息来连接到对等节点，该消息包含您的版本号、块和当前时间到远程节点。远程节点用它自己的“version”消息进行响应。然后两个节点向另一个节点发送一个“ verack”消息，以表明连接已经建立。
-
-Once connected, the client can send to the remote node `getaddr` and [“addr” messages](https://developer.bitcoin.org/reference/p2p_networking.html#addr) to gather additional peers.
-
-一旦连接上，客户端就可以发送到远程节点 getaddr 和“ addr”消息来收集其他的节点。
-
-In order to maintain a connection with a peer, nodes by default will send a message to peers before 30 minutes of inactivity. If 90 minutes pass without a message being received by a peer, the client will assume that connection has closed.
+一旦连接上，客户端就可以发送到远程节点 `getaddr` 和 `addr`消息来收集其他的节点。
 
 为了维护与对等节点的连接，默认情况下，节点将在30分钟的不活动状态之前向对等节点发送消息。如果90分钟过去了，对等端没有接收到消息，客户端将假定连接已经关闭。
 
 ## 初次区块下载
 
-Before a full node can validate unconfirmed transactions and recently-mined blocks, it must download and validate all blocks from block 1 (the block after the hardcoded genesis block) to the current tip of the best block chain. This is the Initial Block Download (IBD) or initial sync.
+在全节点验证未确认的交易和最近挖掘的块之前，它必须下载并验证从块1(硬编码起源块之后的块)到作为最佳区块链的当前顶端的所有块。这就是初始块下载(IBD)或初始同步。
 
-在全节点验证未确认的交易和最近挖掘的块之前，它必须下载并验证从块1(硬编码起源块之后的块)到最佳块链的当前顶端的所有块。这是初始块下载(IBD)或初始同步。
+虽然“初始”这个词意味着这种方法只使用一次，但它也可以在需要下载大量块的任何时候使用，例如在以前遇到的节点长时间处于离线状态时。在这种情况下，节点可以使用 IBD 方法下载自上次联机以来生成的所有块。
 
-Although the word “initial” implies this method is only used once, it can also be used any time a large number of blocks need to be downloaded, such as when a previously-caught-up node has been offline for a long time. In this case, a node can use the IBD method to download all the blocks which were produced since the last time it was online.
-
-虽然“ initial”这个词意味着这种方法只使用一次，但它也可以在需要下载大量块的任何时候使用，例如在以前遇到的节点长时间处于离线状态时。在这种情况下，节点可以使用 IBD 方法下载自上次联机以来生成的所有块。
-
-Bitcoin Core uses the IBD method any time the last block on its local best block chain has a block header time more than 24 hours in the past. [Bitcoin Core 0.10.0](https://bitcoin.org/en/release/v0.10.0) will also perform IBD if its local best block chain is more than 144 blocks lower than its local best header chain (that is, the local block chain is more than about 24 hours in the past).
-
-比特币核心使用 IBD 方法，任何时候当地最好的块链上的最后一个块头时间超过24小时。如果比特币核心0.10.0的本地最佳区块链比本地最佳区块链低144个区块(也就是说，本地区块链在过去大约24小时以上) ，它也将执行 IBD。
+比特币Core使用 IBD 方法，任何时候最好的区块链上的最后一个块头时间超过24小时。如果比特币Core0.10.0的本地最佳区块链比本地最佳区块链低144个区块(也就是说，本地区块链在过去大约24小时以上) ，它也将执行 IBD。
 
 ### 第一个区块
-
-Bitcoin Core (up until version [0.9.3](https://bitcoin.org/en/release/v0.9.3)) uses a simple initial block download (IBD) method we’ll call *blocks-first*. The goal is to download the blocks from the best block chain in sequence.
 
 比特币核心(直到0.9.3版本)使用一个简单的初始块下载(IBD)方法，我们称之为 block-first。目标是按顺序从最好的块链中下载块。
 
 ![Overview Of Blocks-First Method](https://developer.bitcoin.org/_images/en-blocks-first-flowchart.svg)
 
-Overview Of Blocks-First Method[](https://developer.bitcoin.org/devguide/p2p_network.html#id1 "Permalink to this image")
+### 块优先方法概述
 
-块优先方法概述
-
-The first time a node is started, it only has a single block in its local best block chain—the hardcoded genesis block (block 0). This node chooses a remote peer, called the sync node, and sends it the [“getblocks” message](https://developer.bitcoin.org/reference/p2p_networking.html#getblocks)illustrated below.
-
-当一个节点第一次启动时，它的本地最佳块链中只有一个块，即硬编码的起源块(0块)。该节点选择一个远程对等节点(称为同步节点) ，并向其发送如下所示的“ getblocks”消息。
+当一个节点第一次启动时，它的本地最佳块链中只有一个块，即硬编码的起源块(0块)。该节点选择一个远程对等节点(称为同步节点) ，并向其发送如下所示的`getblocks`消息。
 
 ![First GetBlocks Message Sent During IBD](https://developer.bitcoin.org/_images/en-ibd-getblocks.svg)
 
-First GetBlocks Message Sent During IBD[](https://developer.bitcoin.org/devguide/p2p_network.html#id2 "Permalink to this image")
-
 在 IBD 期间发送的第一条 GetBlocks 消息
 
-In the header hashes field of the [“getblocks” message](https://developer.bitcoin.org/reference/p2p_networking.html#getblocks), this new node sends the header hash of the only block it has, the genesis block (6fe2…0000 in internal byte order). It also sets the stop hash field to all zeroes to request a maximum-size response.
+在“ getblocks”消息的 header hash 字段中，这个新节点发送它所拥有的唯一块的 header hash，即 genesis block (内部字节顺序为6fe2... 0000)。它还将 stop hash 字段设置为全零，以请求最大的响应。
 
-在“ getblocks”消息的 header hash 字段中，这个新节点发送它所拥有的唯一块的 header hash，即 genesis block (内部字节顺序为6fe2... 0000)。它还将 stop hash 字段设置为所有零，以请求最大大小的响应。
-
-Upon [receipt](https://developer.bitcoin.org/terms.html#term-receipt) of the [“getblocks” message](https://developer.bitcoin.org/reference/p2p_networking.html#getblocks), the sync node takes the first (and only) header hash and searches its local best block chain for a block with that header hash. It finds that block 0 matches, so it replies with 500 block inventories (the maximum response to a [“getblocks” message](https://developer.bitcoin.org/reference/p2p_networking.html#getblocks)) starting from block 1. It sends these inventories in the [“inv” message](https://developer.bitcoin.org/reference/p2p_networking.html#inv) illustrated below.
-
-在接收到“ getblocks”消息后，同步节点获取第一个(也是唯一的)头部散列，并用该头部散列搜索其本地最佳块链。它发现块0匹配，所以它从块1开始回复500个块库存(对“ getblocks”消息的最大响应)。它发送这些存货在“ inv”的信息说明如下。
+在接收到`getblocks`消息后，同步节点获取第一个(也是唯一的)头部散列，并用该头部散列搜索其本地最佳块链。它发现块0匹配，所以它从块1开始回复500个块库存(对`getblocks`消息的最大响应)。它发送这些存货在`inv`的信息说明如下。
 
 ![First Inv Message Sent During IBD](https://developer.bitcoin.org/_images/en-ibd-inv.svg)
 
